# arena

./: .gitignore  AGENTS.md  CMakeLists.txt  ERRORS.md  README.md
.github/workflows/: build.yml  ci.yml
asm/: ret.nasm  ret_linux.S
cmake/: mingw-w64.cmake  msvc-xwin.cmake  msvc.cmake
include/: arena.h
src/: error.cpp  error.hpp  errors.h  memory_linux.cpp  memory_win32.cpp  pattern_cache.cpp  scan.cpp  spoof.cpp
tests/: link_test.cpp
tests/lib_verify/: verify.cpp
